# schemax

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  unity-catalog-feature-analysis.md
examples/: advanced_schema.yaml  env.example  sample_schema.yaml  simple_schema.yaml
schemax/: __init__.py  change_generator.py  cli.py  config.py  databricks_client.py  exceptions.py  models.py  schema_parser.py
scripts/: install.sh  security-scan.sh  setup-dev.sh
tests/: test_schema_parser.py
